--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,11 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_home">Dashoboard</string>
+    <string name="action_home">Dashboard</string>
     <string name="action_about">About</string>
     <string name="action_profile">Edit Profile</string>
     <string name="action_help">Help</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
-    <string name="title_activity_about">AboutActivity</string>
+    <!--<string name="title_activity_about">AboutActivity</string>-->
 </resources>
