--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <!--<string name="title_activity_about">AboutActivity</string>-->
+    <string-array name="gender">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
 </resources>
