--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="action_help">Help</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
+    <string name="gcm_defaultSenderId">491881324003</string>
     <!--<string name="title_activity_about">AboutActivity</string>-->
     <string-array name="gender">
         <item>Male</item>
